--- a/rocketchat/secrets.yaml
+++ b/rocketchat/secrets.yaml
@@ -6,9 +6,9 @@ metadata:
 type: Opaque
 stringData:
   # Domain and URLs - CHANGE THESE VALUES
-  ROOT_URL: "http://<CHANGE_ME_HOST>:<CHANGE_ME_PORT>"
-  ROCKETCHAT_HOST: "<CHANGE_ME_HOST>"
-  ROCKETCHAT_PORT: "3000"
+  ROOT_URL: "http://localhost:3005"
+  ROCKETCHAT_HOST: "localhost"
+  ROCKETCHAT_PORT: "3005"
   
   # MongoDB settings
   MONGO_URL: "mongodb://mongodb:27017/rocketchat?replicaSet=rs0"
