--- a/infisical/ingress.yaml
+++ b/infisical/ingress.yaml
@@ -5,18 +5,12 @@ metadata:
   namespace: infisical
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
 spec:
-  tls:
-    - hosts:
-        - infisical.fractal-tess.xyz
-      secretName: infisical-tls
   rules:
-    - host: infisical.fractal-tess.xyz
+    - host: infisical.local
       http:
         paths:
           - path: /
