--- a/infisical/secrets.yaml
+++ b/infisical/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
   # Domain and URLs
-  SITE_URL: "https://infisical.fractal-tess.xyz"
+  SITE_URL: "http://infisical.local"
   NODE_ENV: "production"
   
   # Security - CHANGE THESE VALUES
@@ -18,7 +18,7 @@ stringData:
   SMTP_USERNAME: "resend"
   SMTP_PASSWORD: ""
   SMTP_PORT: "465"
-  SMTP_FROM_ADDRESS: "infisical@fractal-tess.xyz"
+  SMTP_FROM_ADDRESS: "infisical@localhost"
   SMTP_FROM_NAME: "infisical"
   
   # Database settings - CHANGE THESE VALUES
